<resources>
    <string name="app_name">LTCHS Menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="access">Access</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="website">Website</string>
    <string name="location_admin">Admin</string>
    <string name="location_name">Location name</string>
    <string name="employee_name">Employee name</string>
    <string name="add_new_location">Add New Location</string>
    <string name="all_locations">All Locations</string>
    <string name="no_location_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No location in the database. Create new one by clicking the add button at the top right</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="incorrect_username">Incorrect Username</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="password">Password</string>
    <string name="all_employees">All Employees</string>
    <string name="all_items">All Items</string>
    <string name="no_employee_working_for_this_location_add_a_new_one_by_clicking_the_add_button_on_the_top_right">No employee working for this location. Add a new one by clicking the add button on the top right</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="add_new_order">Add New Order</string>
    <string name="add_new_item">Add New Item</string>
    <string name="select_a_location">Select a location</string>
    <string name="select_admin">Select location admin</string>
    <string name="delete">Delete</string>
    <string name="location_deleted_successfully">Location deleted successfully</string>
    <string name="employee_deleted_successfully">Employee deleted successfully</string>
    <string name="error_placeholder_text">Error Placeholder Text</string>
    <string name="item_deleted_successfully">Item deleted successfully</string>
    <string-array name="employee_access_array">
        <item>user</item>
        <item>admin</item>
    </string-array>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="add_item">Add Item</string>
    <string name="add_menu">Add Menu</string>
    <string name="item_name">Item Name</string>
    <string name="item_photo_url">Choose Item Photo</string>
    <string name="menu_date">Choose Date</string>
    <string name="menu_location">Select Location</string>
    <string name="menu_item_id">Choose Menu Item</string>
    <string name="menu_item_orders">Total Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
